Добавил инфу по моделям в README.md

--- a/templates/base.html
+++ b/templates/base.html
@@ -4,13 +4,13 @@
 </head>
 <style>
     .main-wrapper {
-        max-width: 1080px;
-        margin: 0 auto;
+        width: 100%;
     }
     .main-container {
-        width: 100%;
+        margin: 0 auto;
+        max-width: 400px;
         padding-top: 100px;
-        text-align: center;
+        {#text-align: center;#}
     }
 </style>
 <body>
