Написал ридми по запуску проекта, добавил фикстуру, поправил шаблон

--- a/templates/firstapp.html
+++ b/templates/firstapp.html
@@ -19,5 +19,7 @@
                 <hr>
             {% endif %}
 
+        {% empty %}
+            <h2>Контактов пока нет</h2>
         {% endfor %}
 {% endblock %}
